bootstrap: d-flex flex-wrap

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <h2 class="projects-title text-white">Projects</h2>
 
-      <div class="projects-contents hstack">
+      <div class="projects-contents d-flex flex-wrap">
 
         <div class="project card">
           <img class="project-img card-img-top" src="https://github.com/AkienMain/sudoku_solver/blob/master/output/sample.png/output.png?raw=true" alt="Image"/>
@@ -30,13 +30,13 @@
             <p class="project-text card-text">
               It solves Sudoku problem. It inputs image then overwrite and output it.
             </p>
-            <div class="social row row-cols-4">
-              <div class="col">
+            <div class="social d-flex flex-wrap">
+              <div class="social-icon">
                 <a href="https://github.com/AkienMain/sudoku_solver">
                   <img class="icon-github" src="vector/github-mark.svg" alt="GitHub">
                 </a>
               </div>
-              <div class="col">
+              <div class="social-icon">
                 <a href="https://youtube.com/playlist?list=PLzXRGAno1PpEBNPDhm04EpcvdPlHtYrbK&si=cuJbIADaTkguUID_">
                   <img class="icon-youtube" src="image/yt_icon_red_digital.png" alt="YouTube">
                 </a>
@@ -52,8 +52,8 @@
             <p class="project-text card-text">
               This is a web application for quiz. You can set your own questions on spreadSheet. It calculates correct answer rate.
             </p>
-            <div class="social row row-cols-4">
-              <div class="col">
+            <div class="social d-flex flex-wrap">
+              <div class="social-icon">
                 <a href="https://github.com/AkienMain/web-quiz-app">
                   <img class="icon-github" src="vector/github-mark.svg" alt="GitHub">
                 </a>
