added pdf file of sudoku solver

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                   <img class="icon-youtube" src="image/yt_icon_red_digital.png" alt="YouTube">
                 </a>
               </div>
+              <div class="social-icon">
+                <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/AkienMain/sudoku_solver/master/sudoku_solver_slides.pdf">
+                  <img class="icon-pdf" src="vector/file-earmark-pdf-fill.svg" alt="PDF">
+                </a>
+              </div>
             </div>
           </div>
         </div>
