set value actively

--- a/index.html
+++ b/index.html
@@ -30,26 +30,8 @@
             <p class="project-text card-text">
               It solves Sudoku problem. It inputs image then overwrite and output it.
             </p>
-            <div class="open-sample-button-div row">
-              <a class="open-sample-button btn btn-primary" href="https://colab.research.google.com/drive/1Sv39J8c2s3OvC8YfIHK6Sz2S284V5wqG" role="button">Open Sample</a>
-            </div>
-            <div class="social d-flex flex-wrap">
-              <div class="social-icon">
-                <a href="https://github.com/AkienMain/sudoku_solver">
-                  <img class="icon-github" src="vector/github-mark.svg" alt="GitHub">
-                </a>
-              </div>
-              <div class="social-icon">
-                <a href="https://youtube.com/playlist?list=PLzXRGAno1PpEBNPDhm04EpcvdPlHtYrbK&si=cuJbIADaTkguUID_">
-                  <img class="icon-youtube" src="image/yt_icon_red_digital.png" alt="YouTube">
-                </a>
-              </div>
-              <div class="social-icon">
-                <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/AkienMain/sudoku_solver/master/sudoku_solver_slides.pdf">
-                  <img class="icon-pdf" src="vector/file-earmark-pdf-fill.svg" alt="PDF">
-                </a>
-              </div>
-            </div>
+            <div id="sudokuSolverOpenSample"></div>
+            <div id="sudokuSolverSocial"></div>
           </div>
         </div>
 
@@ -60,16 +42,8 @@
             <p class="project-text card-text">
               This is a web application for quiz. You can set your own questions on spreadSheet. It calculates correct answer rate.
             </p>
-            <div class="open-sample-button-div row">
-              <a class="open-sample-button btn btn-primary" href="https://akienmain.github.io/web-quiz-app/?deployId=AKfycbzawU6UrMJ09U8XodGZQzRl4j7LWMtMp7qM4N4pAIvdhq9Jp-lG5n4uyPuYnoU4c-oA&spreadsheetId=1x6S9YuGaWFpyFIwLl3EXBtH1P32GPfE4T4iKdAVGBTg" role="button">Open Sample</a>
-            </div>
-            <div class="social d-flex flex-wrap">
-              <div class="social-icon">
-                <a href="https://github.com/AkienMain/web-quiz-app">
-                  <img class="icon-github" src="vector/github-mark.svg" alt="GitHub">
-                </a>
-              </div>
-            </div>
+            <div id="webQuizAppOpenSample"></div>
+            <div id="webQuizAppSocial"></div>
           </div>
         </div>
 
@@ -85,5 +59,9 @@
       <div>akienmain@gmail.com</div>
     </div>
   </footer>
+
+  <div id="demo"  class="social d-flex flex-wrap"></div>
+
+  <script src="js/main.js"></script>
 
 </html>
