set value actively

--- a/index.html
+++ b/index.html
@@ -18,37 +18,8 @@
   <body>
 
     <div class="projects vstack">
-
       <h2 class="projects-title text-white">Projects</h2>
-
-      <div class="projects-contents d-flex flex-wrap">
-
-        <div class="project card">
-          <img class="project-img card-img-top" src="https://github.com/AkienMain/sudoku_solver/blob/master/output/sample.png/output.png?raw=true" alt="Image"/>
-          <div class="project-body card-body">
-            <h3 class="project-title card-title">Sudoku Solver</h3>
-            <p class="project-text card-text">
-              It solves Sudoku problem. It inputs image then overwrite and output it.
-            </p>
-            <div id="sudokuSolverOpenSample"></div>
-            <div id="sudokuSolverSocial"></div>
-          </div>
-        </div>
-
-        <div class="project card">
-          <img class="project-img card-img-top" src="https://github.com/AkienMain/web-quiz-app/blob/main/images/i004.png?raw=true" alt="Image"/>
-          <div class="project-body card-body">
-            <h3 class="project-title card-title">webQuizApp</h3>
-            <p class="project-text card-text">
-              This is a web application for quiz. You can set your own questions on spreadSheet. It calculates correct answer rate.
-            </p>
-            <div id="webQuizAppOpenSample"></div>
-            <div id="webQuizAppSocial"></div>
-          </div>
-        </div>
-
-      </div>
-
+      <div id="projects-contents" class="projects-contents d-flex flex-wrap"></div>
     </div>
 
   </body>
@@ -60,7 +31,7 @@
     </div>
   </footer>
 
-  <div id="demo"  class="social d-flex flex-wrap"></div>
+  <div id="debug"></div>
 
   <script src="js/main.js"></script>
 
