--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
 
     <div class="projects vstack">
       <h2 class="projects-title text-white">Projects</h2>
-      <div id="projects-contents" class="projects-contents d-flex flex-wrap"></div>
+      <div id="projects-contents" class="projects-contents d-flex flex-wrap justify-content-center"></div>
     </div>
 
   </body>
 
   <footer>
     <div class="text-white">
-      <div>AkienMain Website</div>
-      <div>akienmain@gmail.com</div>
+      <div class="hstack justify-content-center">
+        <a href="mailto:akienmain@gmail.com">
+          <button class="btn button-mail">
+            <img src="vector/envelope.svg" class="icon-mail"></img>
+          </button>
+        </a>
+        <div>akienmain@gmail.com</div>
+      </div>
     </div>
   </footer>
 
