--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
   </head>
 
   <header>
-    <h1 class="page-title text-white">AkienMain</h1>
+    <h1 class="page-title display-1">AkienMain</h1>
   </header>
 
   <body>
-
-    <div class="projects vstack">
-      <h2 class="projects-title text-white">Projects</h2>
+    <div class="projects vstack card border-0 shadow-inner">
+      <h2 class="projects-title hstack justify-content-center">Projects</h2>
       <div id="projects-contents" class="projects-contents d-flex flex-wrap justify-content-center"></div>
     </div>
-
-  </body>
+  </body >
 
   <footer>
-    <div class="text-white">
+    <div>
       <div class="hstack justify-content-center">
         <a href="mailto:akienmain@gmail.com">
           <button class="btn button-mail">
